correction bug z-index

--- a/sources/stylesheets/components/screen-animals.styl
+++ b/sources/stylesheets/components/screen-animals.styl
@@ -1,6 +1,8 @@
+.animals-container
+	z-index: 180
+
 #screen-animals
 	// background: imageNamed('halo.png') no-repeat center center color.animalsBackground
-		
 	h2
 		margin-top 8%
 		color #FFF
